...

    <string name="title_activity_assignment_create_form">Create Assignment</string>
    <string name="assignment__form__user_class">Student To Assign</string>
    <string name="action_settings">Settings</string>
    <string name="assignment__form__assignment_name">Assignment Name</string>
    <string name="assignment__form__due_date">Due Date</string>
    <string name="assignment__form__add_todo_item">Add ToDo Item</string>
    <string name="assignment__form__reuse_todo_item">Reuse Item</string>
    <string name="assignment__form__cancel_assignment">Cancel</string>
    <string name="assignment__form__cancel">Cancel</string>
    <string name="assignment__form__save">Save</string>
    <string name="assignment__form__add_todos">Add Todo\'s</string>
    <string name="title_activity_assignment_overview">Assignment Overview</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="assignment__overview__author_label">Author:</string>
    <string name="assignments__overview__name_label">Assignment Name</string>
    <string name="date_format__month_day">MMM d</string>

...
    <string name="user_profile_chat">Chat</string>
    <string name="form__delete_button">Delete</string>
    <string name="assignment__overview__user_label">Assignee</string>
    <string name="title_activity_user_search">Search for Users</string>
    <string name="title_activity_add_users">Add Users</string>
    <string name="title_activity_chat_landing">Chat with others</string>
    <string name="title_activity_user_main_profile">User Profile</string>
    <string name="title_activity_login">Log In</string>
    <string name="text_content">text</string>
    <string name="action_Language">Language</string>
    <string name="assignment__form__view_todos">To Do</string>
    <string name="form__view_button">View</string>
    <string name="title_activity_assignment_view">View Assignment</string>
    <string name="title_activity_to_do_item_view">View To Do Item</string>
    <string name="completed">Completed</string>

    <!-- Youtube -->
    <string name="addYoutubeUrl">YouTube Url</string>
    <string name="shareVideo">Share Video to Youtube</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">(Go)</string>
...
