<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/listItemSmallVerticalMargin"
    android:scrollbars="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:id="@+id/toDoAssignmentFormWrapper">

        <CheckBox
            android:id="@+id/to_do_item_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toDoName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:layout_marginHorizontal="20dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edit_button"
            app:layout_constraintStart_toEndOf="@+id/to_do_item_completed"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/edit_button"
            style="@android:style/Widget.Holo.Light.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:background="@drawable/ic_baseline_chevron_right_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <LinearLayout-->
<!--            android:id="@+id/actionsButtons"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="end">-->

<!--        </LinearLayout>-->




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
