...
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/to_do_item__form__name" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/require_recording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:visibility="gone"
                    android:text="@string/to_do_item__form__require_recording" />
            </LinearLayout>
...
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assignment__form__cancel" />

                <Button
                    android:id="@+id/saveAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/assignment__form__save" />
            </LinearLayout>

...
